front_chore : fix table align

--- a/front-end/queant/src/assets/css/table.css
+++ b/front-end/queant/src/assets/css/table.css
@@ -7,6 +7,7 @@
   min-width: 300px;
   max-width: 100%;
   border-collapse: collapse;
+	vertical-align: middle;
 }
 
 .rwd-table tr:first-child {
